--- a/src/routes/ChatRoute/ChatRoute.scss
+++ b/src/routes/ChatRoute/ChatRoute.scss
@@ -31,7 +31,7 @@
   justify-content: space-between;
   padding: 15px;
   margin: 0 20px;
-  border-radius: 20px;
+  border-radius: $border-radius;
   background-color: $color-secondary;
 
   @media (max-width: $tablet) {
