--- a/src/routes/ExpensesRoute/ExpensesRoute.scss
+++ b/src/routes/ExpensesRoute/ExpensesRoute.scss
@@ -19,7 +19,7 @@
   color: white;
   padding: 20px 0;
   margin: 10px 20px;
-  border-radius: 20px;
+  border-radius: $border-radius;
   overflow: scroll;
 }
 
