--- a/src/routes/ExpensesRoute/components/ExpensePopup/ExpensePopup.scss
+++ b/src/routes/ExpensesRoute/components/ExpensePopup/ExpensePopup.scss
@@ -55,7 +55,7 @@
     width: 50%;
     height: 50px;
     padding: 10px 45px;
-    border-radius: 10px;
+    border-radius: $border-radius;
     background: none;
     color: white;
     font-size: large;
